Fix for slow performing OU TreeView's #516

--- a/BLAZAMGui/UI/Inputs/TreeViews/OUTreeView.razor
+++ b/BLAZAMGui/UI/Inputs/TreeViews/OUTreeView.razor
@@ -12,7 +12,7 @@
              @bind-SelectedValue="SelectedEntry">
     <ItemTemplate>
         <MudTreeViewItem Value="@context.Value"
-                         Items=@GetItems(context.Value)
+                         Items=@GetChildren(context.Value)
                          LoadingIconColor="Color.Info"
                          @bind-Expanded="@context.Expanded"
                          @bind-Activated=context.Selected
