Assign and unassign improvements

--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -90,21 +90,20 @@
             </MudItem>
             <MudItem xs="12" md="6">
                 <Section Style="min-height:200px;" Title=@AppLocalization["Parent Groups"]>
-                    <MemberOfList Model="Group" />
+                    <MemberOfList AssignToClicked=@AssignToModal.ShowAsync Model="Group" />
 
                 </Section>
             </MudItem>
 
 
-            @if (Group.CanReadField(ActiveDirectoryFields.MemberOf))
-            {
+   
                 <MudItem xs="12" md="12">
                     <Section Style="min-height:200px;" Title=@AppLocalization["Members"]>
                         <GroupMembersDataGrid Group="Group" />
 
                     </Section>
                 </MudItem>
-            }
+            
         </MudGrid>
 
 
