--- a/BLAZAMGui/UI/Inputs/ADAutoCompleteResult.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoCompleteResult.razor
@@ -18,11 +18,10 @@
 
 <MudGrid Class="mud-width-full" Spacing="0">
     <MudItem sm="12" md="2">
-        @* <MudIcon Icon="@context.TypeIcon()" /> *@
-        <MudIcon Icon="@typeIcon"/>
+        <MudIcon Disabled=Disabled Icon="@typeIcon"/>
 
     </MudItem>
-    <MudItem  sm="12" md="10">
+    <MudItem sm="12" md="10">
         <MudStack Row=true Spacing="0">
             <MudStack Spacing="0">
                 <MudText Typo="Typo.subtitle2">
