--- a/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoComplete.razor
@@ -1,6 +1,6 @@
 ﻿@inherits AutoCompleteComponentBase
 @{
-//TODO Finish custom disable 
+    //TODO Finish custom disable
 }
 <MudAutocomplete Class="@Class"
                  Style="@Style"
@@ -19,6 +19,7 @@
                  Validation="@Validation"
                  CoerceText="@(!AllowCustomInput)"
                  CoerceValue="true"
+                 ItemDisabledFunc="@(CustomDisableFilter??((r)=>false))"
                  MaxItems=@MaxResults
                  Clearable=true
                  Dense=true
@@ -30,6 +31,7 @@
                  AdornmentIcon="@AdornmentIcon"
                  Variant="@Variant">
     <ItemTemplate>
+
         <ADAutoCompleteResult Entry="context" />
 
     </ItemTemplate>
@@ -60,14 +62,14 @@
     </NoItemsTemplate>
     <MoreItemsTemplate>
         <MudButton OnClick="ShowMoreResults" Color="Color.Primary">@AppLocalization["Show more"]</MudButton>
-            <MudText>
-                More results than shown...
-            </MudText>
-        </MoreItemsTemplate>
-    </MudAutocomplete>
+        <MudText>
+            More results than shown...
+        </MudText>
+    </MoreItemsTemplate>
+</MudAutocomplete>
 
 @code {
-    #nullable disable warnings
+#nullable disable warnings
     [Parameter]
     public Func<object> Validation { get; set; }
     [Parameter]
